--- a/Beacon/Blazor/_Imports.razor
+++ b/Beacon/Blazor/_Imports.razor
@@ -7,10 +7,12 @@
 @using Beacon.Model
 @using Beacon.Model.Enums
 @using Beacon.Model.Songs
+@using Beacon.Model.Bibles
 @using Beacon.Blazor
 @using Beacon.Blazor.Pages
 @using Beacon.Blazor.Components
 @using Beacon.Blazor.Components.Songs
+@using Beacon.Blazor.Components.Bibles
 @using Beacon.Blazor.Components.Controls
 
 @using WpfScreenHelper
