--- a/Beacon/Blazor/Components/Songs/LyricList.razor
+++ b/Beacon/Blazor/Components/Songs/LyricList.razor
@@ -8,7 +8,7 @@
 		var sameText = lyric.Text == SelectedLyric.Text;
 
 		<div id="lyric(@lyric.Id)" class="border-x-2 border-sidepanel bg-container relative flex w-full cursor-pointer items-center whitespace-pre rounded-3xl text-center text-sm
-@(isSelected && sameText ? "bg-primary text-accented-on-primary" : "hover:bg-primary hover:bg-opacity-50 hover:text-accented-on-primary dark:hover:bg-opacity-15")"
+@(isSelected && sameText ? "bg-primary text-accented-on-primary" : "hover:bg-primary hover:bg-opacity-50 hover:text-accented-on-primary dark:hover:bg-opacity-15 dark:bg-opacity-25 dark:border-opacity-50 bg-opacity-25 border-opacity-50")"
 		@onclick="(async () => await SelectionChanged(lyric))">
 
 			<span class="absolute left-5 top-3 text-xs">@lyric.Line</span>
